k8s/fibonacciapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fibonacciapi-service
  labels:
    appname: fibonacciapi
    language: dotnet
spec:
  selector:
    app: fibonacciapi
  ports:
  - port: 8090
    name: 8090-fibonacciapiport
