k8s/fibonacciapi-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fibonacciapi

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: fibonacciapi
  name: fibonacciapi-deployment
  labels:
    appname: fibonacciapi
    language: dotnet
spec:
  selector:
    matchLabels:
      app: fibonacciapi
  template:
    metadata:
      labels:
        app: fibonacciapi
    spec:
      containers:
      - name: fibonacciapi
        image: docker.io/ybustamante/fibonacciapi@sha256:52924d97c2365827c62b840b02b897d03fde6680e644afb72db66df81057563a
        resources:
          requests:
            memory: "60Mi"
            cpu: "80m"
          limits:
            memory: "128Mi"
            cpu: "120m"
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: fibonacciapi
  namespace: fibonacciapi
  labels:
    appname: fibonacciapi
    language: dotnet
spec:
  selector:
    app: fibonacciapi
  ports:
  - port: 8090
    name: 8090-fibonacciapiport  
  #type: LoadBalancer


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fibonacciapi
  namespace: fibonacciapi
  labels:
    name: fibonacciapi
spec:
  ingressClassName: ingress-internal
  rules:
  - host: "localhost"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fibonacciapi
            port: 
              number: 8090
